syntax="proto3";

package classifications.key.v1beta1;

import "third_party/proto/gogoproto/gogo.proto";
import "proto/schema/base/v1beta1/id.proto";

option go_package = "modules/classifications/internal/key";

message classificationID {

  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal)            = false;

  schema.base.v1beta1.ID chainID =1 [(gogoproto.nullable) = false];
  schema.base.v1beta1.ID hashID =2 [(gogoproto.nullable) = false];






}